feat: new seeder, new migration, swagger docs update, readme file update
